src/BSP/bme280.h

typedef unsigned char  INT8U;                    /* Unsigned  8 bit quantity                           */
typedef signed   char  INT8S;                    /* Signed    8 bit quantity                           */
typedef unsigned short INT16U;                   /* Unsigned 16 bit quantity                           */
typedef signed   short INT16S;                   /* Signed   16 bit quantity                           */
typedef unsigned int   INT32U;                   /* Unsigned 32 bit quantity                           */
typedef signed   int   INT32S;                   /* Signed   32 bit quantity                           */
/**************************************************************/
/**\name	STRUCTURE DEFINITIONS                         */
/**************************************************************/
/*!
 * @brief This structure holds all device specific calibration parameters
 */
struct bme280_calibration_param_t {
	INT16U dig_T1;	/**<calibration T1 data*/
	INT16S dig_T2;	/**<calibration T2 data*/
	INT16S dig_T3;	/**<calibration T3 data*/
    INT32S t_fine;/**<calibration T_FINE data*/
};
/*!
 * @brief This structure holds BME280 initialization parameters
 */
struct bme280_t {

	struct bme280_calibration_param_t cal_param;
	/**< calibration parameters*/

	uint8_t chip_id; /**< chip id of the sensor*/
	uint8_t dev_addr;/**< device address of the sensor*/
	uint8_t osrs_p;
	uint8_t oversamp_temperature;/**< temperature over sampling*/
	uint8_t oversamp_pressure;/**< pressure over sampling*/
	uint8_t oversamp_humidity;/**< humidity over sampling*/
	uint8_t ctrl_hum_reg;/**< status of control humidity register*/
	uint8_t ctrl_meas_reg;/**< status of control measurement register*/
	uint8_t config_reg;/**< status of configuration register*/

};
uint8_t Chip_id_read(void);
void bme280_set_soft_rst(void);
INT8U bme280_get_calib_param(void);
INT8U bme280_init(struct bme280_t *data);
INT8U bme280_write_register(INT8U v_addr_u8,INT8U v_data_u8);
INT8U bme280_read_register(INT8U v_addr_u8);
INT8U bme280_set_config(INT8U v_data_u8);
INT8U bme280_set_power_mode(INT8U v_power_mode_u8);
INT8U bme280_set_work_mode(INT8U v_work_mode_u8);
INT32S bme280_read_uncomp_temperature(void);
INT16S bme280_compensate_temperature_int32_sixteen_bit_output(INT32S v_uncomp_temperature_s32);
INT32S bme280_compensate_temperature_int32(INT32S v_uncomp_temperature_s32);
INT32S bme280_compensate_temperature_read(void);