src/BSP/bme280.rs

#[test]
fn bindgen_test_layout___fsid_t() {
    assert_eq!(
        ::core::mem::size_of::<__fsid_t>(),
        8usize,
        concat!("Size of: ", stringify!(__fsid_t))
    );
    assert_eq!(
        ::core::mem::align_of::<__fsid_t>(),
        4usize,
        concat!("Alignment of ", stringify!(__fsid_t))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<__fsid_t>())).__val as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(__fsid_t),
            "::",
            stringify!(__val)
        )
    );
}
pub type __clock_t = cty::c_long;
pub type __rlim_t = cty::c_ulong;
pub type __rlim64_t = cty::c_ulong;
pub type __id_t = cty::c_uint;
pub type __time_t = cty::c_long;
pub type __useconds_t = cty::c_uint;
pub type __suseconds_t = cty::c_long;
pub type __daddr_t = cty::c_int;
pub type __key_t = cty::c_int;
pub type __clockid_t = cty::c_int;
pub type __timer_t = *mut cty::c_void;
pub type __blksize_t = cty::c_long;
pub type __blkcnt_t = cty::c_long;
pub type __blkcnt64_t = cty::c_long;
pub type __fsblkcnt_t = cty::c_ulong;
pub type __fsblkcnt64_t = cty::c_ulong;
pub type __fsfilcnt_t = cty::c_ulong;
pub type __fsfilcnt64_t = cty::c_ulong;
pub type __fsword_t = cty::c_long;
pub type __ssize_t = cty::c_long;
pub type __syscall_slong_t = cty::c_long;
pub type __syscall_ulong_t = cty::c_ulong;
pub type __loff_t = __off64_t;
pub type __caddr_t = *mut cty::c_char;
pub type __intptr_t = cty::c_long;
pub type __socklen_t = cty::c_uint;
pub type __sig_atomic_t = cty::c_int;
pub type int_least8_t = cty::c_schar;
pub type int_least16_t = cty::c_short;
pub type int_least32_t = cty::c_int;
pub type int_least64_t = cty::c_long;
pub type uint_least8_t = cty::c_uchar;
pub type uint_least16_t = cty::c_ushort;
pub type uint_least32_t = cty::c_uint;
pub type uint_least64_t = cty::c_ulong;
pub type int_fast8_t = cty::c_schar;
pub type int_fast16_t = cty::c_long;
pub type int_fast32_t = cty::c_long;
pub type int_fast64_t = cty::c_long;
pub type uint_fast8_t = cty::c_uchar;
pub type uint_fast16_t = cty::c_ulong;
pub type uint_fast32_t = cty::c_ulong;
pub type uint_fast64_t = cty::c_ulong;
pub type intmax_t = __intmax_t;
pub type uintmax_t = __uintmax_t;
pub type INT8U = cty::c_uchar;
pub type INT8S = cty::c_schar;
pub type INT16U = cty::c_ushort;
pub type INT16S = cty::c_short;
pub type INT32U = cty::c_uint;
pub type INT32S = cty::c_int;
#[doc = " @brief This structure holds all device specific calibration parameters"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bme280_calibration_param_t {
    #[doc = "<calibration T1 data"]
    pub dig_T1: INT16U,
    #[doc = "<calibration T2 data"]
    pub dig_T2: INT16S,
    #[doc = "<calibration T3 data"]
    pub dig_T3: INT16S,
    #[doc = "<calibration T_FINE data"]
    pub t_fine: INT32S,
}
#[test]
fn bindgen_test_layout_bme280_calibration_param_t() {
    assert_eq!(
        ::core::mem::size_of::<bme280_calibration_param_t>(),
        12usize,
        concat!("Size of: ", stringify!(bme280_calibration_param_t))
    );
    assert_eq!(
        ::core::mem::align_of::<bme280_calibration_param_t>(),
        4usize,
        concat!("Alignment of ", stringify!(bme280_calibration_param_t))
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<bme280_calibration_param_t>())).dig_T1 as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bme280_calibration_param_t),
            "::",
            stringify!(dig_T1)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<bme280_calibration_param_t>())).dig_T2 as *const _ as usize
        },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(bme280_calibration_param_t),
            "::",
            stringify!(dig_T2)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<bme280_calibration_param_t>())).dig_T3 as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(bme280_calibration_param_t),
            "::",
            stringify!(dig_T3)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::core::ptr::null::<bme280_calibration_param_t>())).t_fine as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(bme280_calibration_param_t),
            "::",
            stringify!(t_fine)
        )
    );
}
#[doc = " @brief This structure holds BME280 initialization parameters"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct bme280_t {
    pub cal_param: bme280_calibration_param_t,
    #[doc = "< chip id of the sensor"]
    pub chip_id: u8,
    #[doc = "< device address of the sensor"]
    pub dev_addr: u8,
    pub osrs_p: u8,
    #[doc = "< temperature over sampling"]
    pub oversamp_temperature: u8,
    #[doc = "< pressure over sampling"]
    pub oversamp_pressure: u8,
    #[doc = "< humidity over sampling"]
    pub oversamp_humidity: u8,
    #[doc = "< status of control humidity register"]
    pub ctrl_hum_reg: u8,
    #[doc = "< status of control measurement register"]
    pub ctrl_meas_reg: u8,
    #[doc = "< status of configuration register"]
    pub config_reg: u8,
}
#[test]
fn bindgen_test_layout_bme280_t() {
    assert_eq!(
        ::core::mem::size_of::<bme280_t>(),
        24usize,
        concat!("Size of: ", stringify!(bme280_t))
    );
    assert_eq!(
        ::core::mem::align_of::<bme280_t>(),
        4usize,
        concat!("Alignment of ", stringify!(bme280_t))
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<bme280_t>())).cal_param as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bme280_t),
            "::",
            stringify!(cal_param)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<bme280_t>())).chip_id as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(bme280_t),
            "::",
            stringify!(chip_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<bme280_t>())).dev_addr as *const _ as usize },
        13usize,
        concat!(
            "Offset of field: ",
            stringify!(bme280_t),
            "::",
            stringify!(dev_addr)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<bme280_t>())).osrs_p as *const _ as usize },
        14usize,
        concat!(
            "Offset of field: ",
            stringify!(bme280_t),
            "::",
            stringify!(osrs_p)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<bme280_t>())).oversamp_temperature as *const _ as usize },
        15usize,
        concat!(
            "Offset of field: ",
            stringify!(bme280_t),
            "::",
            stringify!(oversamp_temperature)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<bme280_t>())).oversamp_pressure as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(bme280_t),
            "::",
            stringify!(oversamp_pressure)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<bme280_t>())).oversamp_humidity as *const _ as usize },
        17usize,
        concat!(
            "Offset of field: ",
            stringify!(bme280_t),
            "::",
            stringify!(oversamp_humidity)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<bme280_t>())).ctrl_hum_reg as *const _ as usize },
        18usize,
        concat!(
            "Offset of field: ",
            stringify!(bme280_t),
            "::",
            stringify!(ctrl_hum_reg)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<bme280_t>())).ctrl_meas_reg as *const _ as usize },
        19usize,
        concat!(
            "Offset of field: ",
            stringify!(bme280_t),
            "::",
            stringify!(ctrl_meas_reg)
        )
    );
    assert_eq!(
        unsafe { &(*(::core::ptr::null::<bme280_t>())).config_reg as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(bme280_t),
            "::",
            stringify!(config_reg)
        )
    );
}
extern "C" {
    pub fn Chip_id_read() -> u8;
}
extern "C" {
    pub fn bme280_set_soft_rst();
}
extern "C" {
    pub fn bme280_get_calib_param() -> INT8U;
}
extern "C" {
    pub fn bme280_init(data: *mut bme280_t) -> INT8U;
}
extern "C" {
    pub fn bme280_write_register(v_addr_u8: INT8U, v_data_u8: INT8U) -> INT8U;
}
extern "C" {
    pub fn bme280_read_register(v_addr_u8: INT8U) -> INT8U;
}
extern "C" {
    pub fn bme280_set_config(v_data_u8: INT8U) -> INT8U;
}
extern "C" {
    pub fn bme280_set_power_mode(v_power_mode_u8: INT8U) -> INT8U;
}
extern "C" {
    pub fn bme280_set_work_mode(v_work_mode_u8: INT8U) -> INT8U;
}
extern "C" {
    pub fn bme280_read_uncomp_temperature() -> INT32S;
}
extern "C" {
    pub fn bme280_compensate_temperature_int32_sixteen_bit_output(
        v_uncomp_temperature_s32: INT32S,
    ) -> INT16S;
}
extern "C" {
    pub fn bme280_compensate_temperature_int32(v_uncomp_temperature_s32: INT32S) -> INT32S;
}
extern "C" {
    pub fn bme280_compensate_temperature_read() -> INT32S;
}
